--- a/app/src/main/res/layout/app_bar_container.xml
+++ b/app/src/main/res/layout/app_bar_container.xml
@@ -3,26 +3,24 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container_activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/container_activity"
-    android:context="hiram.vendimia.MainActivity"
     >
 
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="@dimen/toolbar_size"
             android:background="@color/colorPrimary"
+            app:titleTextColor="@color/primaryText"
             />
-
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/container_layout"/>
-
+    <include layout="@layout/activity_container"/>
 </android.support.design.widget.CoordinatorLayout>
