--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="nav_height">176dp</dimen>
     <dimen name="general_padding">16dp</dimen>
+    <dimen name="toolbar_p_t">64dp</dimen>
+    <dimen name="toolbar_size">60dp</dimen>
 </resources>
