--- a/app/src/main/res/layout/app_bar_container.xml
+++ b/app/src/main/res/layout/app_bar_container.xml
@@ -22,5 +22,11 @@
             />
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/activity_container"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Bienvenido!"
+        android:layout_gravity="center"
+        />
+
 </android.support.design.widget.CoordinatorLayout>
