--- a/app/src/main/res/layout/app_bar_container.xml
+++ b/app/src/main/res/layout/app_bar_container.xml
@@ -22,11 +22,11 @@
             />
     </android.support.design.widget.AppBarLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Bienvenido!"
-        android:layout_gravity="center"
-        />
+    <FrameLayout
+        android:id="@+id/mainContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </FrameLayout>
 
 </android.support.design.widget.CoordinatorLayout>
