--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -16,7 +16,7 @@
         <item
             android:id="@+id/articlesItem"
             android:title="@string/articleTab"
-            android:icon="@drawable/ic_clients"
+            android:icon="@drawable/ic_articles"
             />
         <item
             android:id="@+id/configItem"
