--- a/app/src/main/res/layout/app_bar_container.xml
+++ b/app/src/main/res/layout/app_bar_container.xml
@@ -18,7 +18,8 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/toolbar_size"
             android:background="@color/colorPrimary"
-            app:titleTextColor="@color/primaryText"
+            app:titleTextColor="@color/colorPrimaryLight"
+
             />
     </android.support.design.widget.AppBarLayout>
 
