--- a/app/src/main/res/layout/app_bar_container.xml
+++ b/app/src/main/res/layout/app_bar_container.xml
@@ -6,6 +6,7 @@
     android:id="@+id/container_activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/recyclerBackground"
     >
 
     <android.support.design.widget.AppBarLayout
@@ -24,9 +25,13 @@
     </android.support.design.widget.AppBarLayout>
 
     <FrameLayout
+        android:paddingTop="@dimen/toolbar_p_t"
         android:id="@+id/mainContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingLeft="@dimen/general_padding"
+        android:paddingRight="@dimen/general_padding"
+        >
 
     </FrameLayout>
 
