--- a/app/src/main/res/layout/sales_view_holder.xml
+++ b/app/src/main/res/layout/sales_view_holder.xml
@@ -1,17 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:cardview="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cardview_sales"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="80dp"
+    cardview:cardCornerRadius="4dp"
+    android:layout_marginBottom="16dp"
+    >
 
-    <LinearLayout
-        android:orientation="horizontal"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/general_padding"
+        android:layout_height="match_parent"
         >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:weightSum="1"
+            >
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight=".6"
+            >
         <TextView
+            android:layout_marginStart="@dimen/general_padding"
             android:id="@+id/rv_folio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -31,17 +46,18 @@
             android:layout_height="wrap_content"
             android:text="@string/date"
             />
-    </LinearLayout>
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        </LinearLayout>
+         <LinearLayout
+             android:layout_weight=".4"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
         <TextView
+            android:layout_marginStart="@dimen/general_padding"
             android:id="@+id/rv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/name"
-            android:layout_marginEnd="80dp"
+            android:layout_marginEnd="90dp"
             />
         <TextView
             android:id="@+id/rv_total"
@@ -56,6 +72,7 @@
             android:layout_height="wrap_content"
             android:text="@string/status"
             />
-    </LinearLayout>
-
-</LinearLayout>
+         </LinearLayout>
+        </LinearLayout>
+    </FrameLayout>
+</android.support.v7.widget.CardView>
