--- a/app/src/main/res/layout/fragment_new_sale.xml
+++ b/app/src/main/res/layout/fragment_new_sale.xml
@@ -1,14 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.NewSaleFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/isgone_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:layout_gravity="center"
+        />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerview_products"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        tools:listitem="@layout/sales_view_holder"
+        />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_add_sale"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginBottom="@dimen/general_padding"
+        app:srcCompat="@drawable/ic_add"
+        app:fab_size="normal"
+        />
 
-</FrameLayout>
+
+
+</android.support.design.widget.CoordinatorLayout>
