--- a/app/src/main/res/layout/sales_view_holder.xml
+++ b/app/src/main/res/layout/sales_view_holder.xml
@@ -26,19 +26,27 @@
             android:layout_weight=".6"
             >
         <TextView
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="Folio: "/>
+        <TextView
             android:layout_marginStart="@dimen/general_padding"
             android:id="@+id/rv_folio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/folio"
-            android:layout_marginEnd="80dp"
+            android:layout_marginEnd="40dp"
             />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="No. Cliente: "/>
         <TextView
             android:id="@+id/rv_cclient"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/client_number"
-            android:layout_marginEnd="90dp"
+            android:layout_marginEnd="20dp"
             />
         <TextView
             android:id="@+id/rv_date"
@@ -57,14 +65,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/name"
-            android:layout_marginEnd="90dp"
+            android:layout_marginEnd="100dp"
             />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Total: "/>
         <TextView
             android:id="@+id/rv_total"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/total"
-            android:layout_marginEnd="90dp"
+            android:layout_marginEnd="10dp"
             />
         <TextView
             android:id="@+id/rv_status"
