--- a/app/src/main/res/layout/activity_pop_up.xml
+++ b/app/src/main/res/layout/activity_pop_up.xml
@@ -30,6 +30,7 @@
             android:textSize="20dp"
             />
         <TextView
+            android:id="@+id/tv_model_popup"
             android:paddingTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -57,7 +58,7 @@
             />
         <Spinner
             android:id="@+id/quantity_spinner"
-            android:layout_width="60dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="30dp"
@@ -93,6 +94,7 @@
         android:gravity="center"
         >
         <Button
+            android:id="@+id/button_accept_popup"
             android:text="Aceptar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
