--- a/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_shopping_cart.xml
@@ -5,9 +5,58 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.ShoppingCartActivity">
+    tools:context=".activities.ShoppingCartActivity"
+    >
+<LinearLayout
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:weightSum="1"
+    >
+
+    <LinearLayout
+        android:layout_weight=".1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top"
+        android:orientation="horizontal"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        >
+
+        <RadioGroup
+            android:id="@+id/radio_months"
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            >
+            <RadioButton
+                android:id="@+id/three_radio"
+                android:text="3 Meses"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <RadioButton
+                android:id="@+id/six_radio"
+                android:text="6 Meses"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <RadioButton
+                android:id="@+id/nine_radio"
+                android:text="9 Meses"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <RadioButton
+                android:id="@+id/twelve_radio"
+                android:text="12 Meses"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </RadioGroup>
+
+    </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
+        android:layout_weight=".8"
         android:id="@+id/recyclerview_cart"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -15,6 +64,7 @@
         />
 
 <LinearLayout
+    android:layout_weight=".1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="bottom"
@@ -50,5 +100,5 @@
         />
 
 </LinearLayout>
-
+</LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
