--- a/app/src/main/res/layout/activity_pop_up.xml
+++ b/app/src/main/res/layout/activity_pop_up.xml
@@ -107,6 +107,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <Button
+            android:id="@+id/button_cancel_popup"
             android:text="Cancelar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
