--- a/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_shopping_cart.xml
@@ -11,15 +11,13 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1"
     >
 
     <LinearLayout
-        android:layout_weight=".1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:background="@color/colorPrimary"
         android:gravity="center"
         >
@@ -27,44 +25,84 @@
         <RadioGroup
             android:id="@+id/radio_months"
             android:orientation="horizontal"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:weightSum="8"
             >
             <RadioButton
+                android:layout_weight="2"
                 android:id="@+id/three_radio"
                 android:text="3 Meses"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <RadioButton
+                android:layout_weight="2"
                 android:id="@+id/six_radio"
                 android:text="6 Meses"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <RadioButton
+                android:layout_weight="2"
                 android:id="@+id/nine_radio"
                 android:text="9 Meses"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <RadioButton
+                android:layout_weight="2"
                 android:id="@+id/twelve_radio"
                 android:text="12 Meses"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
         </RadioGroup>
+        <LinearLayout
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="8"
+            >
+        <TextView
+            android:layout_weight="2"
+            android:id="@+id/tv_threemonths"
+            android:text="3meses"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            />
+            <TextView
+                android:gravity="center"
+                android:layout_weight="2"
+                android:id="@+id/tv_sixmonths"
+                android:text="6meses"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:gravity="center"
+                android:layout_weight="2"
+                android:id="@+id/tv_ninemonths"
+                android:text="9meses"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:gravity="center"
+                android:layout_weight="2"
+                android:id="@+id/tv_twelvemonths"
+                android:text="12meses"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
+        </LinearLayout>
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
-        android:layout_weight=".8"
         android:id="@+id/recyclerview_cart"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="480dp"
         tools:listitem="@layout/cart_viewholder"
         />
 
 <LinearLayout
-    android:layout_weight=".1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="bottom"
@@ -91,6 +129,7 @@
         />
 
     <Button
+        android:id="@+id/button_accept_cart"
         android:layout_weight=".2"
         android:text="Comprar"
         android:layout_width="wrap_content"
