--- a/app/src/main/res/layout/activity_select_client.xml
+++ b/app/src/main/res/layout/activity_select_client.xml
@@ -31,6 +31,12 @@
         android:layout_marginBottom="40dp"
         >
     </Spinner>
+        <Button
+            android:id="@+id/button_accept_select_cient"
+            android:text="Aceptar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
     </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
